v1.2.1-25w18a(Added error message on GUI for invalid item from uncrafting)